--- a/Stop_watch/app/src/main/res/layout/activity_main.xml
+++ b/Stop_watch/app/src/main/res/layout/activity_main.xml
@@ -36,20 +36,37 @@
 
     <TextView
         android:id="@+id/subTvSplash"
-        android:layout_width="255dp"
-        android:layout_height="59dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:lineSpacingExtra="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        android:text="Life is too short to be weak, life heavy then"
+        android:text="Life is too short to be weak \n live healthy"
         android:textAlignment="center"
-        android:textColor="#fff"
+        android:textColor="#A3A2AD"
         android:textSize="20sp"
         android:textStyle="italic"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvSplash" />
+
+    <Button
+        android:id="@+id/btn_get_started"
+        android:layout_width="280dp"
+        android:layout_height="55dp"
+        android:text="Get Started"
+        android:textStyle="bold"
+        android:textColor="#fff"
+        android:textSize="20sp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginBottom="40dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
