--- a/Stop_watch/app/src/main/res/drawable/backgroundbtnred.xml
+++ b/Stop_watch/app/src/main/res/drawable/backgroundbtnred.xml
@@ -1,4 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <solid
+        android:color="#FF769A"
+        />
 
-</selector>
+    <corners
+        android:radius="200dp"
+        />
+
+</shape>
