--- a/Stop_watch/app/src/main/res/layout/activity_main.xml
+++ b/Stop_watch/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:text="Healthy On You"
-        android:textColor="#fff"
+        android:textColor="#F1DD30"
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
